--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
+spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/pizzeria
 spring.datasource.username=user
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.message.basename= erreurs, messages
+spring.sql.init.mode=always
+spring.datasource.initialization-mode=always
 
-spring.security.user.name=Tatiana
-spring.security.user.password=motdepasse
-
-springdoc.swagger-ui.persistAuthorization=true
